<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.machimbira.currency.features.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_app_in"
            android:textAlignment="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"
            android:textSize="25dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/english"
            android:textColor="@android:color/white"
            android:id="@+id/select_english"
            android:background="@android:color/transparent"
            android:textSize="25dp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/shona"
            android:textColor="@android:color/white"
            android:id="@+id/select_shona"
            android:background="@android:color/transparent"
            android:textSize="25dp"
            />
    </LinearLayout>

</FrameLayout>
